[package]
name = "calc_engine"
version = "0.2.1"
authors = ["Tevinthuku <tevinthuku@gmail.com>"]
edition = "2018"
description = "An engine / tool that performs calculations."
license = "MIT"
keywords = ["parser", "calculator"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
