[package]
name = "calc_engine"
version = "0.4.1"
authors = ["Tevinthuku <tevinthuku@gmail.com>"]
edition = "2018"
description = "An engine / tool that performs calculations."
license = "MIT"
keywords = ["parser", "calculator"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
repository = "https://github.com/tevs-rust-land/rust-calc"

[dependencies]
auto_correct_n_suggest = "0.2.0"
